@@ -1,6 +1,7 @@
 X   X
     * Add Axe + Respiration = generate tree
     * Add Hoe + Fire Protection = sensor
+    * Add Leggings + Punch = rocket pants (double-tap shift)
     * Change Boots + Punch = hover jump, now activated by double-tapping shift
     * Improve Shovel + Power = excavate, now can excavate sand
 
